--- a/docs/可行性分析.md
+++ b/docs/可行性分析.md
@@ -10,8 +10,18 @@
 
 
 
+## 解决方案
+
+1. 壁纸图片源：
+   - Unsplash等免费图片源
+2. 图片推荐流程：
+   - 客户端从服务器获得最新推荐图片
+     - 先使用图片API加载图片，如果加载不成功则向服务器请求加载图片。
+
+
+
 ## 待决定
 
 1. 用户喜好数据是否保存在本地？
-2. 是否有必要搭建用户系统？（毕竟壁纸应用频率低）
+2. 是否有必要搭建用户系统？（壁纸应用使用频率低）
 
