实现并测试了图片下载和存储功能

--- a/docs/可行性分析.md
+++ b/docs/可行性分析.md
@@ -13,10 +13,13 @@
 ## 解决方案
 
 1. 壁纸图片源：
+  
    - Unsplash等免费图片源
 2. 图片推荐流程：
-   - 客户端从服务器获得最新推荐图片
-     - 先使用图片API加载图片，如果加载不成功则向服务器请求加载图片。
+   - Unsplash提供图片collection，直接从一个collection中加载图片，省去了图片服务端的开发。
+   - 使用unsplash用户建立多个collection，可以按类别推荐图片。
+3. 数据库设计采用Room进行设计
+4. 图片列表使用RecyclerView
 
 
 
