--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -5,3 +5,10 @@
 - 项目立项，取名为*alue*， 意思为blue把b换成了a。
 - 进行了初步的需求分析和可行性分析。
 
+## 5.12
+
+- 学习了Unsplash的图片API
+
+## 5.14
+
+- 配置了Room，遇到了Manifest merge error。在Refractor中使用Migrate to AndroidX 解决此问题。但是随即出现编译错误，分析应该是Room相关源文件写的不完全造成的。
