--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -12,3 +12,11 @@
 ## 5.14
 
 - 配置了Room，遇到了Manifest merge error。在Refractor中使用Migrate to AndroidX 解决此问题。但是随即出现编译错误，分析应该是Room相关源文件写的不完全造成的。
+
+## 5.15
+
+- 完善了文件存取，并测试成功。
+
+- 使用GLide加载网络图片，暂时不使用glide加载本地图片，因为glide的本地缓存策略略有一些奇怪，导致图片难以正确加载。
+
+  
