--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -19,3 +19,8 @@
 - 使用GLide加载网络图片，暂时不使用glide加载本地图片，因为glide的本地缓存策略略有一些奇怪，导致图片难以正确加载。
 - 完善了数据库设置，实现了数据库读写，并测试。
 
+## 5.16
+
+- 使用Volley进行网络访问。
+- 实现网络连接功能并测试。
+
