实现了保存图片和设置壁纸功能。
- 一个奇怪的api bug，当page在per_page之前时会获得不正确的返回，注意per_page应该用在page之前。

--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -30,3 +30,9 @@
 - 链接了测试和MainActivity
 
 - 完成了本地数据库和云端数据同步功能。
+
+## 5.21
+
+- 实现了保存图片和设置壁纸功能。
+  - 一个奇怪的api bug，当page在per_page之前时会获得不正确的返回，注意per_page应该用在page之前。
+
