使用PhotoView显示图片的详细信息。

--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -35,4 +35,5 @@
 
 - 实现了保存图片和设置壁纸功能。
   - 一个奇怪的api bug，当page在per_page之前时会获得不正确的返回，注意per_page应该用在page之前。
-
+- 使用PhotoView显示图片的详细信息。
+  - 此api的奇怪之处有待发掘，page=0和page=1的情况不同。。
