- 完善了各个页面，增加了about页面 - 将各个活动设置为全屏显示   - 之前API的问题应该是缓存问题，api更新速度比较慢，不影响开发。

--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -37,3 +37,9 @@
   - 一个奇怪的api bug，当page在per_page之前时会获得不正确的返回，注意per_page应该用在page之前。
 - 使用PhotoView显示图片的详细信息。
   - 此api的奇怪之处有待发掘，page=0和page=1的情况不同。。
+
+## 5.22
+
+- 完善了各个页面，增加了about页面
+- 将各个活动设置为全屏显示
+  - 之前API的问题应该是缓存问题，api更新速度比较慢，不影响开发。
