基本功能开发完毕！

--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -43,3 +43,9 @@
 - 完善了各个页面，增加了about页面
 - 将各个活动设置为全屏显示
   - 之前API的问题应该是缓存问题，api更新速度比较慢，不影响开发。
+- 基本功能开发完毕！
+  - TO-DO
+  - RecyclerView 的动画
+  - 支付宝链接
+  - 其他功能
+  - 图标设计
