- RecyclerView动画实现 - 设置了版本号等。 - 申请华为应用市场上架。

--- a/alueclient/app/src/main/res/values/strings.xml
+++ b/alueclient/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">alue-client</string>
+    <string name="app_name">alue</string>
     <string name="textview">TextView</string>
 </resources>
