--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -57,8 +57,14 @@
   - todo
   - 高清图片选项
   - 定时图片设置
-
 - RecyclerView动画实现
 - 设置了版本号等。
 - 申请华为应用市场上架。
 - 增加了进度条，beta:1.0.4发布。
+
+## 5.24
+
+- 修复诸多bug
+- 增加按键防抖
+- 发布beta:1.1.0
+
