--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -58,6 +58,7 @@
   - 高清图片选项
   - 定时图片设置
 - RecyclerView动画实现
+- 取消了缩放键，解决缩放问题
 - 设置了版本号等。
 - 申请华为应用市场上架。
 - 增加了进度条，beta:1.0.4发布。
@@ -68,4 +69,4 @@
 - 增加按键防抖
 - 发布beta:1.1.0
 - 增加多种品质的图片下载
-- 发布beta:1.1.2
+- 发布beta:1.1.3
